[workspace]
resolver = "2"
members = ["crates/core", "crates/wasm", "crates/cli"]

[workspace.package]
version = "0.3.0"
edition = "2021"
authors = ["Kmschr <Kmschr@gmail.com>"]
repository = "https://github.com/Kmschr/BrickCartographer"
license = "GPL-3.0-only"

[workspace.dependencies]
brick-cartographer-core = { path = "crates/core" }
brickadia = "0.1.26"
brdb = { git = "https://github.com/brickadia-community/brdb.git", default-features = false, features = ["brz", "wasm"] }
serde_json = "1.0"
image = { version = "0.23.4", default-features = false, features = ["png"] }
wgpu = { version = "30", default-features = false, features = ["wgsl", "std"] }
futures-channel = "0.3"

[profile.release]
opt-level = 3
